syntax = "proto3";

package com.gosh.entity;
message RecUserFeature {
    string user_quitlive_3latest = 1; //
}